Fix waybar duplicate on reload, fix element contrast on waybar, improving screenshot bindings

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,3 +1,6 @@
+* {
+    color: #ffffff;
+}
 @keyframes bar-in {
 	from {
 		opacity: 0;
